ConceptRelationshipComposite : ui fixes for controls EditConceptRelationshipComposite : changed polling interval to 1 sec IStatusComposite, StatusComposite, StatusPresenter, ConceptRelationshipUI, ConceptRelationshipView : allowing setting of classifications via url parameters StatusPresenterTest : testing method for getting StatusEditorUI, DbStatusUI, AbstractAuthenticatedUI, NavigatorTestUI : exposing vaadin request to abstract init method d3.conceptrelationshiptree_connector.js : changed size to work on smaller screens edit.scss, styles.scss : corrected icon size

--- a/src/main/webapp/VAADIN/themes/edit/edit.scss
+++ b/src/main/webapp/VAADIN/themes/edit/edit.scss
@@ -41,7 +41,7 @@
 
     .cr-arrow .v-icon {
         color: #006666;
-        font-size: 40px;
+        font-size: 30px;
     }
 
 }
