--- a/src/main/webapp/VAADIN/themes/edit/styles.css
+++ b/src/main/webapp/VAADIN/themes/edit/styles.css
@@ -5899,5 +5899,5 @@ body .edit.v-app .v-app-loading {
 
 .edit .cr-arrow .v-icon {
 	color: #006666;
-	font-size: 40px;
+	font-size: 30px;
 }
